fixes dark mode support

--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ button:disabled {
   }
 
   .photos-app {
-    margin-left: 40px;
+    padding-left: 40px;
   }
 
   .photo-album {
